add bit of style still shit tho

--- a/TOP-CV-project/src/index.css
+++ b/TOP-CV-project/src/index.css
@@ -13,6 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,9 +25,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
@@ -54,22 +52,28 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.App{
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr;
+.App {
+  display: flex;
+  justify-content: space-evenly;
+  /* column-gap: 5rem;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr; */
 }
 
-.App:nth-child(1){
+.formDiv{
   grid-column-start: 0;
   grid-column-end: 1;
 }
-.App:nth-child(2){
-  grid-column-start: 1;
-  grid-column-end: 2;
+.CVDiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  grid-column-start: 2;
 }
 
-.form{
+.form {
   display: flex;
   flex-direction: column;
   gap: 2rem;
